# computer_vision_practice

./: .clangd  .gitignore  CMakeLists.txt
src/: test_homography.cpp  view_camera.cpp
